Revision history for Catalyst-Authentication-AuthTkt

0.03    28 Aug 2008
        * Renamed from Catalyst::Plugin::Authentication::AuthTkt
        * updates to support Apache::AuthTkt 0.08 API changes

0.04    29 Aug 2008
        * add Static::Simple plugin to Makefile.PL reqs (not that
          it is actually used yet...)

0.05    29 Aug 2008
        * fix POD for search.cpan.org display

0.06    2 Sept 2008
        * add missing req to Makefile.PL

0.07    20 Nov 2008
        * add 'mock' feature for running in development.
        * pass all relevant config args to Apache::AuthTkt->new 

0.08    16 Dec 2008
        * fix bug in Store->expire_ticket() where cookie not found

0.09    xxx
        * set REMOTE_ADDR to $c->req->address if $c->req->address != REMOTE_ADDR.
          This fixes bug when running dev server behind proxy (similar to fcgi).
