@@ -24,4 +24,6 @@ Revision history for Catalyst-Authentication-AuthTkt
 0.09    xxx
         * set REMOTE_ADDR to $c->req->address if $c->req->address != REMOTE_ADDR.
           This fixes bug when running dev server behind proxy (similar to fcgi).
+        * add patch from https://rt.cpan.org/Ticket/Display.html?id=43482
+          to check that authtkt cookie has a value.
 
